[package]
name = "bevy_terrain"
version = "0.1.0"
edition = "2021"

[[example]]
name = "terrain"
path = "examples/terrain/main.rs"

[dependencies]
bevy = "0.15.0"
noise = "0.9.0"
bevy-inspector-egui = "0.28.0"

[dev-dependencies]
bevy_panorbit_camera = "0.21.1"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1